nested-stack-Security-Group-creation.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Creating Security group for Dev , Prod and Test
Parameters: 
  CustomVPCID:
    Description: Please provide vpc ID
    Type: String
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 173.48.205.16/32
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Resources: 
  ProdSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Prod Instance Security Group
      VpcId: !Ref CustomVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Prod-SG"
  DevSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Dev Instance Security Group
      VpcId: !Ref CustomVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Dev-SG"  
  TestSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Test Instance Security Group
      VpcId: !Ref CustomVPCID
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-Test-SG"  
Outputs:
  ProdSecurityGroupId:
    Description: Prod Security Group Id
    Value: !Ref ProdSecurityGroup
  DevSecurityGroup:
    Description: Dev Security Group Id
    Value: !Ref DevSecurityGroup
  TestSecurityGroupId:
    Description: Test Securit yGroup
    Value: !Ref TestSecurityGroup
